[package]
name = "transition"
version = "1.2.0"
authors = ["Bartosz Zbytniewski <bartosz.zbytniewski.dev@gmail.com>"]
description = "Allows to visualise the execution and result of code using LED light blink(1)"
keywords = ["blink(1)", "blink", "notify"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/devzbysiu/transition"
homepage = "https://github.com/devzbysiu/transition"
documentation = "https://docs.rs/transition"
edition = "2018"

[dependencies]
blinkrs = "0.2.1"
crossbeam-channel = "0.4.0"
log = "0.4.8"
thiserror = "1.0.9"

[dev-dependencies]
env_logger = "0.7.1"
