[package]
name = "transition"
version = "0.1.1"
authors = ["Bartosz Zbytniewski <bartosz.zbytniewski.dev@gmail.com>"]
description = "Allows to visualize the execution and result of code using LED light blink(1)"
keywords = ["blink", "notify"]
categories = ["visualization"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/devzbysiu/transition"
homepage = "https://github.com/devzbysiu/transition"
documentation = "https://docs.rs/transition"
edition = "2021"

[dependencies]
blinkrs = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
crossbeam-channel = "0.5.0"
log = "0.4.8"
thiserror = "1.0.9"
doc-comment = "0.3.3"

[dev-dependencies]
env_logger = "0.9.0"
version-sync = "0.9.2"
